# Team04_DrivaPi_SEAME

./: .dotstop.dot  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Gemfile  README.md  artifacts.txt  das   qt-app  tmp.txt  tsf.txt
.github/: NAMING_CONVENTIONS.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: epic.md  sub-issue.md  user-story.md
.github/guidelines/: board_guidelines.md  branch_guidelines.md  project_guidelines.md
.github/instructions/: coding-standards.instructions.md  daily-logs.instructions.md  pull-request.instructions.md  team.instructions.md
.github/workflows/: comment_pr_stm32.yml  comment_pr_tsf.yml  doxygen_documentation.yml  (+6 more)
Dotstop/: .dotstop.dot  dotstop.dot
TSF/: README.md
Threadx/: .project  Doxyfile
docs/: ThreadX_Analysis_and_Doxygen_Documentation.md
dotstop/: .dotstop.dot  pyproject.toml
dotstop/dotstop_extensions/: __init__.py  validators.py
firmware/: .cproject  .mxproject  .project  STM32U585AIIXQ_FLASH.ld  firmware.ioc  firmware.launch
meta-cross/: COPYING.MIT-0  MAINTAINERS  README.md
qt-app/: BUILD_NOTES.md  CMakeLists.txt  README.md  cross_compile.sh  test_feeder.sh  vss_minimal.json  vss_v6.json
qt-app/inc/: app_controller.hpp  can_reader.hpp  cli_parser.hpp  kuksa_reader.hpp  vehicle_data.hpp
qt-app/inc/feeder/: can_ids.hpp  feeder_can.hpp  feeder_cli.hpp  feeder_signal.hpp  handlers.hpp  publisher.hpp
qt-app/inc/gui/: app_controller.hpp  can_reader.hpp  cli_parser.hpp  kuksa_reader.hpp
qt-app/proto/: val.proto
qt-app/resources/: qml.qrc  resources.qrc
qt-app/resources/qml/: main.qml
qt-app/resources/qml/components/: EnergyDisplay.qml  battery_indicator.qml  gear_selector.qml  speed_display.qml
qt-app/src/: app_controller.cpp  can_reader.cpp  cli_parser.cpp  kuksa_reader.cpp  main.cpp  vehicle_data.cpp
qt-app/src/feeder/: README.md  can_decode.hpp  can_ids.hpp  feeder_can.cpp  feeder_cli.cpp  feeder_signal.cpp  handlers.cpp  handlers.hpp  main.cpp  publisher.cpp  publisher.hpp  signals.hpp
qt-app/src/gui/: app_controller.cpp  can_reader.cpp  cli_parser.cpp  kuksa_reader.cpp  main.cpp  vehicle_data.cpp
rust/: controller
scripts/: setup-agl-cross-build.sh
tests/: CMakeLists.txt
tests/integration/: integration_tests_plan.md
tests/integration/motors-and-speed-sensor-integration/inc/: i2c_integration_test.h  main.h
tests/integration/motors-and-speed-sensor-integration/src/: i2c_integration_test.c  main.c  pca9685.c  stm32u5xx_it.c
tests/integration/motors-integration/inc/: main.h
tests/integration/templates/: GENERIC_INTEGRATION_TEST_TEMPLATE.md  GENERIC_TEST_TEMPLATE.md  PHASE_A_TEMPLATE.md  PHASE_B_TEMPLATE.md  PHASE_C_TEMPLATE.md  PHASE_D_TEMPLATE.md  TEMPLATE_USAGE_GUIDE.md
tests/unit/: common_test_lib.sh  run_all_tests.sh  run_all_tests.sh-old
tests/unit/common/mocks/: pca9685.h  stm32_hal_i2c.h
tests/unit/common/src/: app_threadx.h  mock_stm32u5xx_hal.c  pca9685_testable.h
tests/unit/common/support/: app_threadx.h  main.h  pca9685.h  stm32u5xx_hal.h  tx_api.h
tests/unit/dc-motor/: dc-motor.xml  project.yml
tests/unit/dc-motor/scripts/: run_tests.sh
tests/unit/dc-motor/src/: dc_motor.h  dc_motor_functions.c  dc_motor_testable.h
tests/unit/dc-motor/test/: test_dc_motor.c  test_dc_motor_LLTC_UNIT.c  test_dc_motor_functions.c
tests/unit/dc_motor/: project.yml
tests/unit/dc_motor/scripts/: run_tests.sh
tests/unit/dc_motor/test/: test_dc_motor_LLTC_UNIT.c  test_threadx_dc_motor_with_mocks.c
tests/unit/motor-servo/: project.yml
tests/unit/motor-servo/scripts/: run_tests.sh
tests/unit/motor-servo/src/: mock_stm32u5xx_hal.c  mock_stm32u5xx_hal.h  servo_motor.c  servo_motor.h  speed_sensor_functions.c  speed_sensor_functions.h
tests/unit/motor-servo/test/: test_dc_motor_REAL_SRD_MOTOR_001.c  test_servo_functions.c  test_threadx_dc_motor_with_mocks.c  test_threadx_servo_motor_with_mocks.c
tests/unit/motor-servo/test/mocks/: dc_motor.h  tx_api.h
tests/unit/motor_servo/: project.yml
tests/unit/motor_servo/scripts/: run_tests.sh
tests/unit/motor_servo/src/: dc_motor_functions.h  dc_motor_testable.c  dc_motor_testable.h  pca9685_testable.c  pca9685_testable.h  servo_functions.c  servo_functions.h  stm32u5xx_hal.h  threadx_stubs.c
tests/unit/motor_servo/test/: test_speed_sensor_functions.c  test_threadx_dc_motor.c  test_threadx_servo_motor.c  test_threadx_speed_sensor.c
tests/unit/motor_servo/test/mocks/: app_threadx.h  dc_motor_test.h  main.h  stm32u5xx_hal.h
tests/unit/motor_servo/test/support/: automotive_types.h  test_helpers.h  unit_stubs.h
tests/unit/servo-motor/: project.yml  servo-motor.xml
tests/unit/servo-motor/scripts/: run_tests.sh
tests/unit/servo-motor/src/: servo_motor.h
tests/unit/servo-motor/test/: test_servo_motor.c  test_speed_sensor.c
tests/unit/servo-motor/test/support/: stm32u5xx_hal.h
tests/unit/servo_motor/scripts/: run_tests.sh
tests/unit/servo_motor/test/: test_threadx_servo_motor_with_mocks.c
tests/unit/speed-sensor/: project.yml
tests/unit/speed-sensor-old/: speed-sensor.xml
tests/unit/speed-sensor-old/src/: speed_sensor.c
tests/unit/speed-sensor/scripts/: run_speedtest.sh
tests/unit/speed-sensor/src/: speed_sensor.c  speed_sensor.h
tests/unit/speed-sensor/test/: test_speed_sensor.c
tests/unit/speed-sensor/test/support/: app_threadx.h  main.h  stm32u5xx_hal.h  tx_api.h
tests/unit/speed_sensor/: README.md  project.yml  run_speedtest.sh
tests/unit/speed_sensor/coverage_report/: cmd_line  index.html
tests/unit/speed_sensor/coverage_report/Src/: index.html  speed_sensor.c.func-c.html  speed_sensor.c.func.html  speed_sensor.c.gcov.html
tests/unit/speed_sensor/coverage_report/src/: index.html  speed_sensor.c.func-c.html  speed_sensor.c.func.html  speed_sensor.c.gcov.html
tests/unit/speed_sensor/src/: speed_sensor.c
tests/unit/speed_sensor/test/: test_speed_sensor.c
tests/unit/speed_sensor/test/support/: main.h  stm32u5xx_hal_conf.h
tests/verification/coverage/: approvals.json  baseline.json
threadx/: .cproject  Threadx Debug.launch  Threadx.ioc
(+732 files in other folders)
